# paddy-predict

./: .gitignore  README.md  main.py  model_training.ipynb  pyproject.toml  requirements.txt
saved_models/: label_encoder_disease.pkl  label_encoder_variety.pkl
templates/: index.html
