[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "keras>=3.9.2",
    "pillow>=11.2.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.2",
]
